--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "email-validator": "^2.0.4",
+    "firebase": "^10.3.0",
     "next": "13.4.19",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^4.10.1",
+    "react-native-spinkit": "^1.5.1",
+    "sass": "^1.66.1",
+    "styled-components": "^6.0.7"
   }
 }
