estilizando chatfooter para novo modo code

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "email-validator": "^2.0.4",
     "firebase": "^10.3.0",
     "next": "13.4.19",
+    "prettier": "^3.0.3",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
